--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "babelify": "^6.0.2",
     "browser-sync": "^2.7.1",
     "browserify": "^10.2.0",
+    "coffeeify": "^1.1.0",
     "debowerify": "^1.3.1",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-compass": "~2.0.4",
     "gulp-concat": "^2.5.2",
+    "gulp-file": "^0.2.0",
     "gulp-gh-pages": "^0.5.2",
     "gulp-imagemin": "^2.2.1",
     "gulp-jade": "^1.0.0",
