Added styles and some facts

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "underscore": "*",
-    "jquery": "*"
-    },
-  "devDependencies": {  }
+    "jquery": "*",
+    "FlipClock": "~0.7.7",
+    "flipclock": "~0.7.7"
+  },
+  "devDependencies": {}
 }
