--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
-    "gulp-compass": "~2.0.4",
     "gulp-concat": "^2.5.2",
     "gulp-file": "^0.2.0",
     "gulp-gh-pages": "^0.5.2",
@@ -20,6 +19,7 @@
     "gulp-minify-css": "^1.1.1",
     "gulp-plumber": "^1.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.4",
     "gulp-uglify": "~1.2.0",
     "gulp-util": "~3.0.4",
     "marked": "~0.3.0",
